...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cmput301f17t07.ingroove.avehabit.AddHabitActivity">


    <EditText
        android:id="@+id/add_habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/habit_name_hint"
        android:inputType="textPersonName" />

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_header"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_habit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="comment"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/add_habit_days_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Habit should be performed on:" />

    <CheckBox
        android:id="@+id/add_habit_day_mon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Monday" />

    <CheckBox
        android:id="@+id/add_habit_day_tues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tuesday" />
...
        android:id="@+id/add_habit_day_wed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Wednesday" />

    <CheckBox
        android:id="@+id/add_habit_day_thur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thursday" />

    <CheckBox
        android:id="@+id/add_habit_day_fri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Friday" />
...
        android:id="@+id/add_date_pick_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_habit_start" />

    <Button
        android:id="@+id/add_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_habit" />
    <Button
        android:id="@+id/add_cancel_btn"
        android:layout_width="match_parent"
...
