<resources>
    <string name="app_name">inGroove</string>
    <string name="title_activity_current_habits">CurrentHabitsActivity</string>

    /* Old Navigation Drawer @TODO delete*/
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>

    /* Navigation Drawer */
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    /* Settings menu
    See the menu/main.xml, where this menu item is established
    */
    <string name="action_settings">Settings</string>


    /* AVEHabit Activity */

    // menu items
    <string name="log_habit_event">Log Event</string>
    <string name="view_habit_stats">See Stats</string>
    <string name="edit_habit_interval">Change Interval</string>
    <string name="save_habit">Save</string>
    <string name="delete_habit">Delete</string>
    <string name="cancel_habit">Cancel</string>
    <string name="pick_habit_start">Choose Start Date</string>

    // Location strings
    <string name="permission_rationale">Without these permissions map features will not work</string>
    <string name="permission_denied_explanation">We need access to your location to enable some features</string>
    <string name="settings">SETTINGS</string>


    // main body
    <string name="habit_name_hint">Habit Name</string>
    <string name="comment_header">Comments</string>
    <string name="comment_body_test">This is a test habit comment</string>
    <string name="habit_events_header">Events from this habit</string>

    /* HabitStatistics Activity */

    // summary headers
    <string name="completed_habits_header">Completed</string>
    <string name="missed_habit_header">Missed</string>
    <string name="completed_habits_test_value">12</string>
    <string name="missed_habits_test_value">90</string>
    <string name="title_activity_maps">Map</string>
    <string name="habit_name">habit_stats_name</string>
    <string name="progress_bar_prct">progress_bar_prct</string>
    <string name="progress_level">progress_level</string>

    /* Content descriptions */
    <string name="event_image">A picture used to describe the event</string>
    <string name="search_btn">Use this button to search for users</string>
    <string name="usr_photo">A photo of the user</string>
    <string name="edit_usr_btn">Edit the user with this button</string>
    <string name="accept_request">Accept the request by this user to follow you</string>
    <string name="reject_request">Reject the request by this user to follow you</string>
    <string name="send_request">Send a request to follow this user</string>
    <string name="streak_image">Picture to describe the users streak level</string>
    <string name="view_he_del_btn">Delete this habit event</string>
    <string name="view_he_edit_btn">Edit this habit event</string>
    <string name="followName">Name:</string>
    <string name="followStreak">Streak:</string>
    <string name="followFindOtherUsers">Find Other Users:</string>

    /* Sign in Alert Dialog */
    <string name="signup_welcome">Welcome!</string>
    <string name="signup_explanation">Please fill in your name and email to get started with inGroove. If you leave the fields blank, an empty profile will be set up which can be edited later on from within the app.</string>
    <string name="signup_dismiss">Okay</string>


</resources>
