...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cmput301f17t07.ingroove.avehabit.AddViewEditHabitActivity">


    <TextView
        android:id="@+id/view_habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/habit_name_hint"
        android:textSize="24sp" />

...
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/view_habit_log_event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_habit_event" />

    <Button
        android:id="@+id/view_habit_stats_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_habit_stats" />

    <Button
        android:id="@+id/view_habit_edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit" />

    <Button
        android:id="@+id/view_habit_del_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_habit" />


</LinearLayout>
...
